@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Make notepad checkbox links switches instead of toggles.
 [jan] Replace categories with tags.
 [jan] Convert to Horde_View.
 
